	* Added a new plugin, Tail, which will tail logfiles and send the
	new lines to a configurable list of targets.
	
	* Added Config.channel, for getting/setting channel configuration
	variables.
	
	* Fixed the problem with channels with dots or colons in them
	raising exceptions whenever the registry was accessed.
	
	* Changed Fun.roulette to use a 6-barrel revolver.
	
	* Changed Bugzilla to use the registry, rather than a custom
	flatfile database format.
	
	* Added the KeepAlive plugin, to send useless keepalive messages
	to someone every some period.  It's mostly just because we
	noticed that MozBot had one, and we couldn't allow ourselves to
	be outdone.
	
	* Changed the URL plugin to use flatfiles rather than SQLite
	database.  Also reduced the functionality of the last command by
	removing some options that no one ever really used, and removed
	the random command (who uses that anyway?)
	
	* Changed the Words plugin not to use SQLite.  We lose the
	anagram command, but crossword and hangman become much easier to
	use, since all the user has to do is put a words file in
	data/words.
	
	* Changed the Relay plugin to rely only on the registry, allowing
	it to start and join all networks and channels with no user/owner
	interaction at all.  Also, removed the Relay.say and
	Relay.reconnect commands, since both can be accomplished easily
	using the Relay.command command in combination with
	Owner.reconnect and Anonymous.say commands.
	
	* Added supybot.reply.withNoticeWhenPrivate, to make the bot
	reply with a notice when it privately messages a user -- this
	generally means that the user's client won't open a query window,
	which may be nice.  Do note that users can override this setting
	via the user registry variable of the same name.
	
	* Added supybot.nick.alternates, which allows a list of alternate
	nicks to try, in order, if the primary nick (supybot.nick) is
	taken.  Also added a nick-perturbation function that will change